# rust-http-server-project

./: Cargo.toml  data.db  data.db-shm  data.db-wal
frontent/: index.html
migrations/: 20251218103207_create_persons_table.sql  20260108113351_create_people_table_v2.sql
src/: db.rs  error.rs  handlers.rs  main.rs  models.rs  routers.rs  routes.rs
